// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Creator/Block Block User Lock 1`] = `
.c10 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #6e849a;
}

.c10 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c11 .c9 {
  color: #fff;
}

.c12 .c9 {
  color: #6e849a;
}

.c2 {
  -webkit-transition: color 0.15s ease,border 0.15s ease;
  transition: color 0.15s ease,border 0.15s ease;
  width: 28px;
  height: 28px;
  line-height: 28px;
  font-size: 14px;
  text-align: center;
  color: #becedc;
  position: relative;
  background-color: #fff;
  background-position: center center;
  background-size: contain;
  border-radius: 100%;
  box-shadow: inset 0 0 0 1px #fff,0 0 0 1px #fff,0 1px 2px 1px rgba(17,49,96,0.16);
  cursor: default;
  font-weight: 600;
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2:before {
  -webkit-transition: border 0.15s ease;
  transition: border 0.15s ease;
  display: block;
  position: absolute;
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border-radius: 100%;
  content: '';
}

.c2:hover .c1:before {
  border-color: rgba(17,49,96,0.13);
}

.c2 > * {
  display: inline-block;
}

.c0 {
  width: 330px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 10px 10px 10px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,#EBEFF4,#e7eaf1);
  position: relative;
  opacity: 1;
  border-color: none;
  -webkit-transition: opacity 0.15s ease;
  transition: opacity 0.15s ease;
}

.vf-canvas--commenting .c0 {
  cursor: crosshair;
}

.c0::before {
  display: block;
  border-radius: 8px;
  position: absolute;
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border: 1px solid #D4D9E0;
  content: '';
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.vf-canvas__node:not(.vf-canvas__node--disabled):not(.vf-canvas__node--focused) .c0:hover::before {
  box-shadow: 0 4px 8px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered .c0 {
  cursor: copy;
}

.vf-canvas__node--focused .c0::before {
  box-shadow: 0 12px 32px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--selected .c0,
.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0 {
  border-color: #5d9df5;
}

.vf-canvas__node--selected .c0::before,
.vf-canvas__node--highlighted .c0::before,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0::before {
  display: none;
}

.vf-canvas--creating-link .vf-canvas__node--disabled .c0 {
  opacity: 0.7;
  cursor: not-allowed;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0 {
  opacity: 0.7;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0:not(.vf-canvas__node--merge-target):hover {
  opacity: 1;
}

.vf-canvas--markup .c0 {
  pointer-events: none !important;
}

.c0 .c1 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c13 .c1 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c14 .c1 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c15 .c1 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c16 .c1 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
  text-overflow: ellipsis;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
  text-overflow: ellipsis;
  padding: 0 42px;
}

.c5 {
  max-width: 100%;
}

.vf-canvas--merging .c5,
.vf-canvas--creating-link .c5 {
  pointer-events: none;
}

.c5 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: text;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #62778c;
}

.c5 input:active {
  background: transparent;
}

.vf-canvas--commenting .c5 input {
  cursor: crosshair;
}

.c5 .vf-canvas__node--active input {
  color: #132144;
}

.c8 {
  position: absolute;
  left: 0;
  padding: 0 5px;
}

.c3 {
  position: relative;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  background-color: #fff;
}

<div
  style={
    Object {
      "padding": "50px",
    }
  }
>
  <div
    className="c0 vf-canvas__block"
  >
    <div
      className="c1 c2"
      style={
        Object {
          "backgroundColor": "#ECF8FA",
          "color": "#36B4D2",
        }
      }
    >
      M
    </div>
    <div
      className="c3 vf-canvas__block__section"
    >
      <div
        className="c4"
      >
        <div
          className="c5 vf-canvas__block__section__title"
          style={
            Object {
              "boxSizing": "content-box",
              "display": "inline-block",
            }
          }
        >
          <input
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onKeyPress={[Function]}
            onMouseUp={[Function]}
            readOnly={true}
            style={
              Object {
                "boxSizing": "content-box",
                "width": "1px",
              }
            }
            tabIndex={-1}
            value="New Block"
          />
          <div
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "scroll",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
                "whiteSpace": "pre",
              }
            }
          >
            New Block
          </div>
        </div>
      </div>
      <section>
        <div
          className="c6"
        >
          Step 1
        </div>
        <div
          className="c6"
        >
          Step 2
        </div>
        <div
          className="c6"
        >
          Step 3
        </div>
        <div
          className="c6"
        >
          Step 4
        </div>
        <div
          className="c6"
        >
          Step 5
        </div>
      </section>
    </div>
    <div
      className="c3 vf-canvas__block__section"
    >
      <div
        className="c7"
      >
        <div
          className="c8"
        >
          <span
            className="c9 c10"
            color="#6e849a"
            size={16}
          >
            <svg
              data-file-name="SvgHome"
            />
          </span>
        </div>
        <div
          className="c5 vf-canvas__block__section__title"
          style={
            Object {
              "boxSizing": "content-box",
              "display": "inline-block",
            }
          }
        >
          <input
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onKeyPress={[Function]}
            onMouseUp={[Function]}
            readOnly={true}
            style={
              Object {
                "boxSizing": "content-box",
                "width": "1px",
              }
            }
            tabIndex={-1}
            value="Section1"
          />
          <div
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "scroll",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
                "whiteSpace": "pre",
              }
            }
          >
            Section1
          </div>
        </div>
      </div>
      <section>
        <div
          className="c6"
        >
          Step 1
        </div>
        <div
          className="c6"
        >
          Step 2
        </div>
      </section>
    </div>
    <div
      className="c3 vf-canvas__block__section"
    >
      <div
        className="c7"
      >
        <div
          className="c8"
        >
          <span
            className="c9 c10"
            color="#6e849a"
            size={16}
          >
            <svg
              data-file-name="SvgHome"
            />
          </span>
        </div>
        <div
          className="c5 vf-canvas__block__section__title"
          style={
            Object {
              "boxSizing": "content-box",
              "display": "inline-block",
            }
          }
        >
          <input
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onKeyPress={[Function]}
            onMouseUp={[Function]}
            readOnly={true}
            style={
              Object {
                "boxSizing": "content-box",
                "width": "1px",
              }
            }
            tabIndex={-1}
            value="Section2 Blah blah blah blah blah"
          />
          <div
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "scroll",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
                "whiteSpace": "pre",
              }
            }
          >
            Section2 Blah blah blah blah blah
          </div>
        </div>
      </div>
      <section>
        <div
          className="c6"
        >
          Step 1
        </div>
        <div
          className="c6"
        >
          Step 2
        </div>
      </section>
    </div>
  </div>
</div>
`;

exports[`Storyshots Creator/Block Blue 1`] = `
.c0 {
  width: 330px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 10px 10px 10px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,#D1ECF8,#c5e7f6);
  position: relative;
  opacity: 1;
  border-color: none;
  -webkit-transition: opacity 0.15s ease;
  transition: opacity 0.15s ease;
}

.vf-canvas--commenting .c0 {
  cursor: crosshair;
}

.c0::before {
  display: block;
  border-radius: 8px;
  position: absolute;
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border: 1px solid #BDD9EE;
  content: '';
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.vf-canvas__node:not(.vf-canvas__node--disabled):not(.vf-canvas__node--focused) .c0:hover::before {
  box-shadow: 0 4px 8px 0 rgba(17,49,96,0.2);
  border-color: #A2C1DC;
}

.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered .c0 {
  cursor: copy;
}

.vf-canvas__node--focused .c0::before {
  box-shadow: 0 12px 32px 0 rgba(17,49,96,0.2);
  border-color: #A2C1DC;
}

.vf-canvas__node--selected .c0,
.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0 {
  border-color: #5d9df5;
}

.vf-canvas__node--selected .c0::before,
.vf-canvas__node--highlighted .c0::before,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0::before {
  display: none;
}

.vf-canvas--creating-link .vf-canvas__node--disabled .c0 {
  opacity: 0.7;
  cursor: not-allowed;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0 {
  opacity: 0.7;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0:not(.vf-canvas__node--merge-target):hover {
  opacity: 1;
}

.vf-canvas--markup .c0 {
  pointer-events: none !important;
}

.c0 .c5 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
  text-overflow: ellipsis;
}

.c3 {
  max-width: 100%;
}

.vf-canvas--merging .c3,
.vf-canvas--creating-link .c3 {
  pointer-events: none;
}

.c3 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: text;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #0f7ec0;
}

.c3 input:active {
  background: transparent;
}

.vf-canvas--commenting .c3 input {
  cursor: crosshair;
}

.c3 .vf-canvas__node--active input {
  color: #05588a;
}

.c1 {
  position: relative;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  background-color: #fff;
}

<div
  className="c0 vf-canvas__block"
>
  <div
    className="c1 vf-canvas__block__section"
  >
    <div
      className="c2"
    >
      <div
        className="c3 vf-canvas__block__section__title"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          tabIndex={-1}
          value="New Block"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          New Block
        </div>
      </div>
    </div>
    <section>
      <div
        className="c4"
      >
        Step 1
      </div>
      <div
        className="c4"
      >
        Step 2
      </div>
      <div
        className="c4"
      >
        Step 3
      </div>
      <div
        className="c4"
      >
        Step 4
      </div>
      <div
        className="c4"
      >
        Step 5
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/Block Disabled State 1`] = `
.c0 {
  width: 330px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 10px 10px 10px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,#EBEFF4,#e7eaf1);
  position: relative;
  opacity: 1;
  border-color: none;
  -webkit-transition: opacity 0.15s ease;
  transition: opacity 0.15s ease;
}

.vf-canvas--commenting .c0 {
  cursor: crosshair;
}

.c0::before {
  display: block;
  border-radius: 8px;
  position: absolute;
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border: 1px solid #D4D9E0;
  content: '';
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.vf-canvas__node:not(.vf-canvas__node--disabled):not(.vf-canvas__node--focused) .c0:hover::before {
  box-shadow: 0 4px 8px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered .c0 {
  cursor: copy;
}

.vf-canvas__node--focused .c0::before {
  box-shadow: 0 12px 32px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--selected .c0,
.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0 {
  border-color: #5d9df5;
}

.vf-canvas__node--selected .c0::before,
.vf-canvas__node--highlighted .c0::before,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0::before {
  display: none;
}

.vf-canvas--creating-link .vf-canvas__node--disabled .c0 {
  opacity: 0.7;
  cursor: not-allowed;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0 {
  opacity: 0.7;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0:not(.vf-canvas__node--merge-target):hover {
  opacity: 1;
}

.vf-canvas--markup .c0 {
  pointer-events: none !important;
}

.c0 .c5 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
  text-overflow: ellipsis;
}

.c3 {
  max-width: 100%;
}

.vf-canvas--merging .c3,
.vf-canvas--creating-link .c3 {
  pointer-events: none;
}

.c3 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: text;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #62778c;
}

.c3 input:active {
  background: transparent;
}

.vf-canvas--commenting .c3 input {
  cursor: crosshair;
}

.c3 .vf-canvas__node--active input {
  color: #132144;
}

.c1 {
  position: relative;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  background-color: #fff;
}

<div
  className="vf-canvas__node--disabled"
>
  <div
    className="c0 vf-canvas__block"
  >
    <div
      className="c1 vf-canvas__block__section"
    >
      <div
        className="c2"
      >
        <div
          className="c3 vf-canvas__block__section__title"
          style={
            Object {
              "boxSizing": "content-box",
              "display": "inline-block",
            }
          }
        >
          <input
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onKeyPress={[Function]}
            onMouseUp={[Function]}
            readOnly={true}
            style={
              Object {
                "boxSizing": "content-box",
                "width": "1px",
              }
            }
            tabIndex={-1}
            value="New Block"
          />
          <div
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "scroll",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
                "whiteSpace": "pre",
              }
            }
          >
            New Block
          </div>
        </div>
      </div>
      <section>
        <div
          className="c4"
        >
          Step 1
        </div>
        <div
          className="c4"
        >
          Step 2
        </div>
        <div
          className="c4"
        >
          Step 3
        </div>
        <div
          className="c4"
        >
          Step 4
        </div>
        <div
          className="c4"
        >
          Step 5
        </div>
      </section>
    </div>
  </div>
</div>
`;

exports[`Storyshots Creator/Block Focused State 1`] = `
.c0 {
  width: 330px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 10px 10px 10px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,#EBEFF4,#e7eaf1);
  position: relative;
  opacity: 1;
  border-color: none;
  -webkit-transition: opacity 0.15s ease;
  transition: opacity 0.15s ease;
}

.vf-canvas--commenting .c0 {
  cursor: crosshair;
}

.c0::before {
  display: block;
  border-radius: 8px;
  position: absolute;
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border: 1px solid #D4D9E0;
  content: '';
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.vf-canvas__node:not(.vf-canvas__node--disabled):not(.vf-canvas__node--focused) .c0:hover::before {
  box-shadow: 0 4px 8px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered .c0 {
  cursor: copy;
}

.vf-canvas__node--focused .c0::before {
  box-shadow: 0 12px 32px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--selected .c0,
.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0 {
  border-color: #5d9df5;
}

.vf-canvas__node--selected .c0::before,
.vf-canvas__node--highlighted .c0::before,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0::before {
  display: none;
}

.vf-canvas--creating-link .vf-canvas__node--disabled .c0 {
  opacity: 0.7;
  cursor: not-allowed;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0 {
  opacity: 0.7;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0:not(.vf-canvas__node--merge-target):hover {
  opacity: 1;
}

.vf-canvas--markup .c0 {
  pointer-events: none !important;
}

.c0 .c5 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
  text-overflow: ellipsis;
}

.c3 {
  max-width: 100%;
}

.vf-canvas--merging .c3,
.vf-canvas--creating-link .c3 {
  pointer-events: none;
}

.c3 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: text;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #62778c;
}

.c3 input:active {
  background: transparent;
}

.vf-canvas--commenting .c3 input {
  cursor: crosshair;
}

.c3 .vf-canvas__node--active input {
  color: #132144;
}

.c1 {
  position: relative;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  background-color: #fff;
}

<div
  className="vf-canvas__node--focused"
>
  <div
    className="c0 vf-canvas__block"
  >
    <div
      className="c1 vf-canvas__block__section"
    >
      <div
        className="c2"
      >
        <div
          className="c3 vf-canvas__block__section__title"
          style={
            Object {
              "boxSizing": "content-box",
              "display": "inline-block",
            }
          }
        >
          <input
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onKeyPress={[Function]}
            onMouseUp={[Function]}
            readOnly={true}
            style={
              Object {
                "boxSizing": "content-box",
                "width": "1px",
              }
            }
            tabIndex={-1}
            value="New Block"
          />
          <div
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "scroll",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
                "whiteSpace": "pre",
              }
            }
          >
            New Block
          </div>
        </div>
      </div>
      <section>
        <div
          className="c4"
        >
          Step 1
        </div>
        <div
          className="c4"
        >
          Step 2
        </div>
        <div
          className="c4"
        >
          Step 3
        </div>
        <div
          className="c4"
        >
          Step 4
        </div>
        <div
          className="c4"
        >
          Step 5
        </div>
      </section>
    </div>
  </div>
</div>
`;

exports[`Storyshots Creator/Block Green 1`] = `
.c0 {
  width: 330px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 10px 10px 10px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,#EAF1EA,#e5eee5);
  position: relative;
  opacity: 1;
  border-color: none;
  -webkit-transition: opacity 0.15s ease;
  transition: opacity 0.15s ease;
}

.vf-canvas--commenting .c0 {
  cursor: crosshair;
}

.c0::before {
  display: block;
  border-radius: 8px;
  position: absolute;
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border: 1px solid #CBD8CC;
  content: '';
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.vf-canvas__node:not(.vf-canvas__node--disabled):not(.vf-canvas__node--focused) .c0:hover::before {
  box-shadow: 0 4px 8px 0 rgba(17,49,96,0.2);
  border-color: #BECDC3;
}

.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered .c0 {
  cursor: copy;
}

.vf-canvas__node--focused .c0::before {
  box-shadow: 0 12px 32px 0 rgba(17,49,96,0.2);
  border-color: #BECDC3;
}

.vf-canvas__node--selected .c0,
.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0 {
  border-color: #5d9df5;
}

.vf-canvas__node--selected .c0::before,
.vf-canvas__node--highlighted .c0::before,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0::before {
  display: none;
}

.vf-canvas--creating-link .vf-canvas__node--disabled .c0 {
  opacity: 0.7;
  cursor: not-allowed;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0 {
  opacity: 0.7;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0:not(.vf-canvas__node--merge-target):hover {
  opacity: 1;
}

.vf-canvas--markup .c0 {
  pointer-events: none !important;
}

.c0 .c5 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
  text-overflow: ellipsis;
}

.c3 {
  max-width: 100%;
}

.vf-canvas--merging .c3,
.vf-canvas--creating-link .c3 {
  pointer-events: none;
}

.c3 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: text;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #6b7a6b;
}

.c3 input:active {
  background: transparent;
}

.vf-canvas--commenting .c3 input {
  cursor: crosshair;
}

.c3 .vf-canvas__node--active input {
  color: #485648;
}

.c1 {
  position: relative;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  background-color: #fff;
}

<div
  className="c0 vf-canvas__block"
>
  <div
    className="c1 vf-canvas__block__section"
  >
    <div
      className="c2"
    >
      <div
        className="c3 vf-canvas__block__section__title"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          tabIndex={-1}
          value="New Block"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          New Block
        </div>
      </div>
    </div>
    <section>
      <div
        className="c4"
      >
        Step 1
      </div>
      <div
        className="c4"
      >
        Step 2
      </div>
      <div
        className="c4"
      >
        Step 3
      </div>
      <div
        className="c4"
      >
        Step 4
      </div>
      <div
        className="c4"
      >
        Step 5
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/Block Long Name 1`] = `
.c0 {
  width: 330px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 10px 10px 10px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,#EBEFF4,#e7eaf1);
  position: relative;
  opacity: 1;
  border-color: none;
  -webkit-transition: opacity 0.15s ease;
  transition: opacity 0.15s ease;
}

.vf-canvas--commenting .c0 {
  cursor: crosshair;
}

.c0::before {
  display: block;
  border-radius: 8px;
  position: absolute;
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border: 1px solid #D4D9E0;
  content: '';
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.vf-canvas__node:not(.vf-canvas__node--disabled):not(.vf-canvas__node--focused) .c0:hover::before {
  box-shadow: 0 4px 8px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered .c0 {
  cursor: copy;
}

.vf-canvas__node--focused .c0::before {
  box-shadow: 0 12px 32px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--selected .c0,
.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0 {
  border-color: #5d9df5;
}

.vf-canvas__node--selected .c0::before,
.vf-canvas__node--highlighted .c0::before,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0::before {
  display: none;
}

.vf-canvas--creating-link .vf-canvas__node--disabled .c0 {
  opacity: 0.7;
  cursor: not-allowed;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0 {
  opacity: 0.7;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0:not(.vf-canvas__node--merge-target):hover {
  opacity: 1;
}

.vf-canvas--markup .c0 {
  pointer-events: none !important;
}

.c0 .c5 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
  text-overflow: ellipsis;
}

.c3 {
  max-width: 100%;
}

.vf-canvas--merging .c3,
.vf-canvas--creating-link .c3 {
  pointer-events: none;
}

.c3 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: text;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #62778c;
}

.c3 input:active {
  background: transparent;
}

.vf-canvas--commenting .c3 input {
  cursor: crosshair;
}

.c3 .vf-canvas__node--active input {
  color: #132144;
}

.c1 {
  position: relative;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  background-color: #fff;
}

<div
  className="c0 vf-canvas__block"
>
  <div
    className="c1 vf-canvas__block__section"
  >
    <div
      className="c2"
    >
      <div
        className="c3 vf-canvas__block__section__title"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          tabIndex={-1}
          value="New Block"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          New Block
        </div>
      </div>
    </div>
    <section>
      <div
        className="c4"
      >
        Step 1
      </div>
      <div
        className="c4"
      >
        Step 2
      </div>
      <div
        className="c4"
      >
        Step 3
      </div>
      <div
        className="c4"
      >
        Step 4
      </div>
      <div
        className="c4"
      >
        Step 5
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/Block Purple 1`] = `
.c0 {
  width: 330px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 10px 10px 10px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,#EDE5F1,#e8deee);
  position: relative;
  opacity: 1;
  border-color: none;
  -webkit-transition: opacity 0.15s ease;
  transition: opacity 0.15s ease;
}

.vf-canvas--commenting .c0 {
  cursor: crosshair;
}

.c0::before {
  display: block;
  border-radius: 8px;
  position: absolute;
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border: 1px solid #DBD5DD;
  content: '';
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.vf-canvas__node:not(.vf-canvas__node--disabled):not(.vf-canvas__node--focused) .c0:hover::before {
  box-shadow: 0 4px 8px 0 rgba(17,49,96,0.2);
  border-color: #CDCAD5;
}

.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered .c0 {
  cursor: copy;
}

.vf-canvas__node--focused .c0::before {
  box-shadow: 0 12px 32px 0 rgba(17,49,96,0.2);
  border-color: #CDCAD5;
}

.vf-canvas__node--selected .c0,
.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0 {
  border-color: #5d9df5;
}

.vf-canvas__node--selected .c0::before,
.vf-canvas__node--highlighted .c0::before,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0::before {
  display: none;
}

.vf-canvas--creating-link .vf-canvas__node--disabled .c0 {
  opacity: 0.7;
  cursor: not-allowed;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0 {
  opacity: 0.7;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0:not(.vf-canvas__node--merge-target):hover {
  opacity: 1;
}

.vf-canvas--markup .c0 {
  pointer-events: none !important;
}

.c0 .c5 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
  text-overflow: ellipsis;
}

.c3 {
  max-width: 100%;
}

.vf-canvas--merging .c3,
.vf-canvas--creating-link .c3 {
  pointer-events: none;
}

.c3 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: text;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #765e84;
}

.c3 input:active {
  background: transparent;
}

.vf-canvas--commenting .c3 input {
  cursor: crosshair;
}

.c3 .vf-canvas__node--active input {
  color: #4e355d;
}

.c1 {
  position: relative;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  background-color: #fff;
}

<div
  className="c0 vf-canvas__block"
>
  <div
    className="c1 vf-canvas__block__section"
  >
    <div
      className="c2"
    >
      <div
        className="c3 vf-canvas__block__section__title"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          tabIndex={-1}
          value="New Block"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          New Block
        </div>
      </div>
    </div>
    <section>
      <div
        className="c4"
      >
        Step 1
      </div>
      <div
        className="c4"
      >
        Step 2
      </div>
      <div
        className="c4"
      >
        Step 3
      </div>
      <div
        className="c4"
      >
        Step 4
      </div>
      <div
        className="c4"
      >
        Step 5
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/Block Red 1`] = `
.c0 {
  width: 330px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 10px 10px 10px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,#FFE0E7,#ffd8e2);
  position: relative;
  opacity: 1;
  border-color: none;
  -webkit-transition: opacity 0.15s ease;
  transition: opacity 0.15s ease;
}

.vf-canvas--commenting .c0 {
  cursor: crosshair;
}

.c0::before {
  display: block;
  border-radius: 8px;
  position: absolute;
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border: 1px solid #E5D6DA;
  content: '';
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.vf-canvas__node:not(.vf-canvas__node--disabled):not(.vf-canvas__node--focused) .c0:hover::before {
  box-shadow: 0 4px 8px 0 rgba(17,49,96,0.2);
  border-color: #D8CBD1;
}

.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered .c0 {
  cursor: copy;
}

.vf-canvas__node--focused .c0::before {
  box-shadow: 0 12px 32px 0 rgba(17,49,96,0.2);
  border-color: #D8CBD1;
}

.vf-canvas__node--selected .c0,
.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0 {
  border-color: #5d9df5;
}

.vf-canvas__node--selected .c0::before,
.vf-canvas__node--highlighted .c0::before,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0::before {
  display: none;
}

.vf-canvas--creating-link .vf-canvas__node--disabled .c0 {
  opacity: 0.7;
  cursor: not-allowed;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0 {
  opacity: 0.7;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0:not(.vf-canvas__node--merge-target):hover {
  opacity: 1;
}

.vf-canvas--markup .c0 {
  pointer-events: none !important;
}

.c0 .c5 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
  text-overflow: ellipsis;
}

.c3 {
  max-width: 100%;
}

.vf-canvas--merging .c3,
.vf-canvas--creating-link .c3 {
  pointer-events: none;
}

.c3 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: text;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #a84862;
}

.c3 input:active {
  background: transparent;
}

.vf-canvas--commenting .c3 input {
  cursor: crosshair;
}

.c3 .vf-canvas__node--active input {
  color: #76273d;
}

.c1 {
  position: relative;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  background-color: #fff;
}

<div
  className="c0 vf-canvas__block"
>
  <div
    className="c1 vf-canvas__block__section"
  >
    <div
      className="c2"
    >
      <div
        className="c3 vf-canvas__block__section__title"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          tabIndex={-1}
          value="New Block"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          New Block
        </div>
      </div>
    </div>
    <section>
      <div
        className="c4"
      >
        Step 1
      </div>
      <div
        className="c4"
      >
        Step 2
      </div>
      <div
        className="c4"
      >
        Step 3
      </div>
      <div
        className="c4"
      >
        Step 4
      </div>
      <div
        className="c4"
      >
        Step 5
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/Block Regular State 1`] = `
.c0 {
  width: 330px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 10px 10px 10px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,#EBEFF4,#e7eaf1);
  position: relative;
  opacity: 1;
  border-color: none;
  -webkit-transition: opacity 0.15s ease;
  transition: opacity 0.15s ease;
}

.vf-canvas--commenting .c0 {
  cursor: crosshair;
}

.c0::before {
  display: block;
  border-radius: 8px;
  position: absolute;
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border: 1px solid #D4D9E0;
  content: '';
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.vf-canvas__node:not(.vf-canvas__node--disabled):not(.vf-canvas__node--focused) .c0:hover::before {
  box-shadow: 0 4px 8px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered .c0 {
  cursor: copy;
}

.vf-canvas__node--focused .c0::before {
  box-shadow: 0 12px 32px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--selected .c0,
.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0 {
  border-color: #5d9df5;
}

.vf-canvas__node--selected .c0::before,
.vf-canvas__node--highlighted .c0::before,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0::before {
  display: none;
}

.vf-canvas--creating-link .vf-canvas__node--disabled .c0 {
  opacity: 0.7;
  cursor: not-allowed;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0 {
  opacity: 0.7;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0:not(.vf-canvas__node--merge-target):hover {
  opacity: 1;
}

.vf-canvas--markup .c0 {
  pointer-events: none !important;
}

.c0 .c5 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
  text-overflow: ellipsis;
}

.c3 {
  max-width: 100%;
}

.vf-canvas--merging .c3,
.vf-canvas--creating-link .c3 {
  pointer-events: none;
}

.c3 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: text;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #62778c;
}

.c3 input:active {
  background: transparent;
}

.vf-canvas--commenting .c3 input {
  cursor: crosshair;
}

.c3 .vf-canvas__node--active input {
  color: #132144;
}

.c1 {
  position: relative;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  background-color: #fff;
}

<div
  className="c0 vf-canvas__block"
>
  <div
    className="c1 vf-canvas__block__section"
  >
    <div
      className="c2"
    >
      <div
        className="c3 vf-canvas__block__section__title"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          tabIndex={-1}
          value="New Block"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          New Block
        </div>
      </div>
    </div>
    <section>
      <div
        className="c4"
      >
        Step 1
      </div>
      <div
        className="c4"
      >
        Step 2
      </div>
      <div
        className="c4"
      >
        Step 3
      </div>
      <div
        className="c4"
      >
        Step 4
      </div>
      <div
        className="c4"
      >
        Step 5
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/Block Selected State 1`] = `
.c0 {
  width: 330px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 10px 10px 10px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,#EBEFF4,#e7eaf1);
  position: relative;
  opacity: 1;
  border-color: none;
  -webkit-transition: opacity 0.15s ease;
  transition: opacity 0.15s ease;
}

.vf-canvas--commenting .c0 {
  cursor: crosshair;
}

.c0::before {
  display: block;
  border-radius: 8px;
  position: absolute;
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border: 1px solid #D4D9E0;
  content: '';
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.vf-canvas__node:not(.vf-canvas__node--disabled):not(.vf-canvas__node--focused) .c0:hover::before {
  box-shadow: 0 4px 8px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered .c0 {
  cursor: copy;
}

.vf-canvas__node--focused .c0::before {
  box-shadow: 0 12px 32px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--selected .c0,
.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0 {
  border-color: #5d9df5;
}

.vf-canvas__node--selected .c0::before,
.vf-canvas__node--highlighted .c0::before,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0::before {
  display: none;
}

.vf-canvas--creating-link .vf-canvas__node--disabled .c0 {
  opacity: 0.7;
  cursor: not-allowed;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0 {
  opacity: 0.7;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0:not(.vf-canvas__node--merge-target):hover {
  opacity: 1;
}

.vf-canvas--markup .c0 {
  pointer-events: none !important;
}

.c0 .c5 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
  text-overflow: ellipsis;
}

.c3 {
  max-width: 100%;
}

.vf-canvas--merging .c3,
.vf-canvas--creating-link .c3 {
  pointer-events: none;
}

.c3 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: text;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #62778c;
}

.c3 input:active {
  background: transparent;
}

.vf-canvas--commenting .c3 input {
  cursor: crosshair;
}

.c3 .vf-canvas__node--active input {
  color: #132144;
}

.c1 {
  position: relative;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  background-color: #fff;
}

<div
  className="vf-canvas__node--selected"
>
  <div
    className="c0 vf-canvas__block"
  >
    <div
      className="c1 vf-canvas__block__section"
    >
      <div
        className="c2"
      >
        <div
          className="c3 vf-canvas__block__section__title"
          style={
            Object {
              "boxSizing": "content-box",
              "display": "inline-block",
            }
          }
        >
          <input
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onKeyPress={[Function]}
            onMouseUp={[Function]}
            readOnly={true}
            style={
              Object {
                "boxSizing": "content-box",
                "width": "1px",
              }
            }
            tabIndex={-1}
            value="New Block"
          />
          <div
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "scroll",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
                "whiteSpace": "pre",
              }
            }
          >
            New Block
          </div>
        </div>
      </div>
      <section>
        <div
          className="c4"
        >
          Step 1
        </div>
        <div
          className="c4"
        >
          Step 2
        </div>
        <div
          className="c4"
        >
          Step 3
        </div>
        <div
          className="c4"
        >
          Step 4
        </div>
        <div
          className="c4"
        >
          Step 5
        </div>
      </section>
    </div>
  </div>
</div>
`;

exports[`Storyshots Creator/Block Standard 1`] = `
.c0 {
  width: 330px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 10px 10px 10px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,#EBEFF4,#e7eaf1);
  position: relative;
  opacity: 1;
  border-color: none;
  -webkit-transition: opacity 0.15s ease;
  transition: opacity 0.15s ease;
}

.vf-canvas--commenting .c0 {
  cursor: crosshair;
}

.c0::before {
  display: block;
  border-radius: 8px;
  position: absolute;
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border: 1px solid #D4D9E0;
  content: '';
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.vf-canvas__node:not(.vf-canvas__node--disabled):not(.vf-canvas__node--focused) .c0:hover::before {
  box-shadow: 0 4px 8px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered .c0 {
  cursor: copy;
}

.vf-canvas__node--focused .c0::before {
  box-shadow: 0 12px 32px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--selected .c0,
.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0 {
  border-color: #5d9df5;
}

.vf-canvas__node--selected .c0::before,
.vf-canvas__node--highlighted .c0::before,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0::before {
  display: none;
}

.vf-canvas--creating-link .vf-canvas__node--disabled .c0 {
  opacity: 0.7;
  cursor: not-allowed;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0 {
  opacity: 0.7;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0:not(.vf-canvas__node--merge-target):hover {
  opacity: 1;
}

.vf-canvas--markup .c0 {
  pointer-events: none !important;
}

.c0 .c5 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
  text-overflow: ellipsis;
}

.c3 {
  max-width: 100%;
}

.vf-canvas--merging .c3,
.vf-canvas--creating-link .c3 {
  pointer-events: none;
}

.c3 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: text;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #62778c;
}

.c3 input:active {
  background: transparent;
}

.vf-canvas--commenting .c3 input {
  cursor: crosshair;
}

.c3 .vf-canvas__node--active input {
  color: #132144;
}

.c1 {
  position: relative;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  background-color: #fff;
}

<div
  className="c0 vf-canvas__block"
>
  <div
    className="c1 vf-canvas__block__section"
  >
    <div
      className="c2"
    >
      <div
        className="c3 vf-canvas__block__section__title"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          tabIndex={-1}
          value="New Block"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          New Block
        </div>
      </div>
    </div>
    <section>
      <div
        className="c4"
      >
        Step 1
      </div>
      <div
        className="c4"
      >
        Step 2
      </div>
      <div
        className="c4"
      >
        Step 3
      </div>
      <div
        className="c4"
      >
        Step 4
      </div>
      <div
        className="c4"
      >
        Step 5
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/Block State Transitions 1`] = `
.c0 {
  width: 330px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 10px 10px 10px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,#EBEFF4,#e7eaf1);
  position: relative;
  opacity: 1;
  border-color: none;
  -webkit-transition: opacity 0.15s ease;
  transition: opacity 0.15s ease;
}

.vf-canvas--commenting .c0 {
  cursor: crosshair;
}

.c0::before {
  display: block;
  border-radius: 8px;
  position: absolute;
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border: 1px solid #D4D9E0;
  content: '';
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.vf-canvas__node:not(.vf-canvas__node--disabled):not(.vf-canvas__node--focused) .c0:hover::before {
  box-shadow: 0 4px 8px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered .c0 {
  cursor: copy;
}

.vf-canvas__node--focused .c0::before {
  box-shadow: 0 12px 32px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--selected .c0,
.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0 {
  border-color: #5d9df5;
}

.vf-canvas__node--selected .c0::before,
.vf-canvas__node--highlighted .c0::before,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0::before {
  display: none;
}

.vf-canvas--creating-link .vf-canvas__node--disabled .c0 {
  opacity: 0.7;
  cursor: not-allowed;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0 {
  opacity: 0.7;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0:not(.vf-canvas__node--merge-target):hover {
  opacity: 1;
}

.vf-canvas--markup .c0 {
  pointer-events: none !important;
}

.c0 .c5 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
  text-overflow: ellipsis;
}

.c3 {
  max-width: 100%;
}

.vf-canvas--merging .c3,
.vf-canvas--creating-link .c3 {
  pointer-events: none;
}

.c3 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: text;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #62778c;
}

.c3 input:active {
  background: transparent;
}

.vf-canvas--commenting .c3 input {
  cursor: crosshair;
}

.c3 .vf-canvas__node--active input {
  color: #132144;
}

.c1 {
  position: relative;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  background-color: #fff;
}

<div
  className=""
>
  <div
    className="c0 vf-canvas__block"
  >
    <div
      className="c1 vf-canvas__block__section"
    >
      <div
        className="c2"
      >
        <div
          className="c3 vf-canvas__block__section__title"
          style={
            Object {
              "boxSizing": "content-box",
              "display": "inline-block",
            }
          }
        >
          <input
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onKeyPress={[Function]}
            onMouseUp={[Function]}
            readOnly={true}
            style={
              Object {
                "boxSizing": "content-box",
                "width": "1px",
              }
            }
            tabIndex={-1}
            value="New Block"
          />
          <div
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "scroll",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
                "whiteSpace": "pre",
              }
            }
          >
            New Block
          </div>
        </div>
      </div>
      <section>
        <div
          className="c4"
        >
          Step 1
        </div>
        <div
          className="c4"
        >
          Step 2
        </div>
        <div
          className="c4"
        >
          Step 3
        </div>
        <div
          className="c4"
        >
          Step 4
        </div>
        <div
          className="c4"
        >
          Step 5
        </div>
      </section>
    </div>
  </div>
</div>
`;

exports[`Storyshots Creator/Block Step User Lock 1`] = `
.c8 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #6e849a;
}

.c8 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c13 .c7 {
  color: #fff;
}

.c14 .c7 {
  color: #6e849a;
}

.c12 {
  -webkit-transition: color 0.15s ease,border 0.15s ease;
  transition: color 0.15s ease,border 0.15s ease;
  width: 28px;
  height: 28px;
  line-height: 28px;
  font-size: 14px;
  text-align: center;
  color: #becedc;
  position: relative;
  background-color: #fff;
  background-position: center center;
  background-size: contain;
  border-radius: 100%;
  box-shadow: inset 0 0 0 1px #fff,0 0 0 1px #fff,0 1px 2px 1px rgba(17,49,96,0.16);
  cursor: default;
  font-weight: 600;
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c12:before {
  -webkit-transition: border 0.15s ease;
  transition: border 0.15s ease;
  display: block;
  position: absolute;
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border-radius: 100%;
  content: '';
}

.c12:hover .c11:before {
  border-color: rgba(17,49,96,0.13);
}

.c12 > * {
  display: inline-block;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  border: 1px solid #d3d9e4;
}

.c10 .c19:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c10 .c11 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.vf-canvas__step.vf-canvas__node--active .c10,
.vf-canvas__step.vf-canvas__node--highlighted .c10 {
  border: 1px solid #5D9DF5;
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--disabled .c10:hover {
  opacity: 0.7;
  cursor: not-allowed;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px rgba(17,49,96,0.08);
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--hovered .c10 {
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px #5D9DF5;
  cursor: copy;
}

.vf-canvas__block.vf-canvas__node--merge-target .c10 {
  z-index: -1;
}

.c9:not(:last-of-type) {
  padding-bottom: 6px;
}

.c0 {
  width: 330px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 10px 10px 10px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,#EBEFF4,#e7eaf1);
  position: relative;
  opacity: 1;
  border-color: none;
  -webkit-transition: opacity 0.15s ease;
  transition: opacity 0.15s ease;
}

.vf-canvas--commenting .c0 {
  cursor: crosshair;
}

.c0::before {
  display: block;
  border-radius: 8px;
  position: absolute;
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border: 1px solid #D4D9E0;
  content: '';
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.vf-canvas__node:not(.vf-canvas__node--disabled):not(.vf-canvas__node--focused) .c0:hover::before {
  box-shadow: 0 4px 8px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered .c0 {
  cursor: copy;
}

.vf-canvas__node--focused .c0::before {
  box-shadow: 0 12px 32px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--selected .c0,
.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0 {
  border-color: #5d9df5;
}

.vf-canvas__node--selected .c0::before,
.vf-canvas__node--highlighted .c0::before,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0::before {
  display: none;
}

.vf-canvas--creating-link .vf-canvas__node--disabled .c0 {
  opacity: 0.7;
  cursor: not-allowed;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0 {
  opacity: 0.7;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0:not(.vf-canvas__node--merge-target):hover {
  opacity: 1;
}

.vf-canvas--markup .c0 {
  pointer-events: none !important;
}

.c0 .c11 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c15 .c11 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c16 .c11 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c17 .c11 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c18 .c11 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
  text-overflow: ellipsis;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
  text-overflow: ellipsis;
  padding: 0 42px;
}

.c3 {
  max-width: 100%;
}

.vf-canvas--merging .c3,
.vf-canvas--creating-link .c3 {
  pointer-events: none;
}

.c3 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: text;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #62778c;
}

.c3 input:active {
  background: transparent;
}

.vf-canvas--commenting .c3 input {
  cursor: crosshair;
}

.c3 .vf-canvas__node--active input {
  color: #132144;
}

.c6 {
  position: absolute;
  left: 0;
  padding: 0 5px;
}

.c1 {
  position: relative;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  background-color: #fff;
}

<div
  style={
    Object {
      "padding": "50px",
    }
  }
>
  <div
    className="c0 vf-canvas__block"
  >
    <div
      className="c1 vf-canvas__block__section"
    >
      <div
        className="c2"
      >
        <div
          className="c3 vf-canvas__block__section__title"
          style={
            Object {
              "boxSizing": "content-box",
              "display": "inline-block",
            }
          }
        >
          <input
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onKeyPress={[Function]}
            onMouseUp={[Function]}
            readOnly={true}
            style={
              Object {
                "boxSizing": "content-box",
                "width": "1px",
              }
            }
            tabIndex={-1}
            value="New Block"
          />
          <div
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "scroll",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
                "whiteSpace": "pre",
              }
            }
          >
            New Block
          </div>
        </div>
      </div>
      <section>
        <div
          className="c4"
        >
          Step 1
        </div>
        <div
          className="c4"
        >
          Step 2
        </div>
        <div
          className="c4"
        >
          Step 3
        </div>
        <div
          className="c4"
        >
          Step 4
        </div>
        <div
          className="c4"
        >
          Step 5
        </div>
      </section>
    </div>
    <div
      className="c1 vf-canvas__block__section"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          <span
            className="c7 c8"
            color="#6e849a"
            size={16}
          >
            <svg
              data-file-name="SvgHome"
            />
          </span>
        </div>
        <div
          className="c3 vf-canvas__block__section__title"
          style={
            Object {
              "boxSizing": "content-box",
              "display": "inline-block",
            }
          }
        >
          <input
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onKeyPress={[Function]}
            onMouseUp={[Function]}
            readOnly={true}
            style={
              Object {
                "boxSizing": "content-box",
                "width": "1px",
              }
            }
            tabIndex={-1}
            value="Section 1"
          />
          <div
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "scroll",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
                "whiteSpace": "pre",
              }
            }
          >
            Section 1
          </div>
        </div>
      </div>
      <section>
        <div
          className="c4"
        >
          Step 1
        </div>
        <div
          className="c4"
        >
          Step 2
        </div>
      </section>
    </div>
    <div
      className="c1 vf-canvas__block__section"
    >
      <div
        className="c2"
      >
        <div
          className="c3 vf-canvas__block__section__title"
          style={
            Object {
              "boxSizing": "content-box",
              "display": "inline-block",
            }
          }
        >
          <input
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onKeyPress={[Function]}
            onMouseUp={[Function]}
            readOnly={true}
            style={
              Object {
                "boxSizing": "content-box",
                "width": "1px",
              }
            }
            tabIndex={-1}
            value="Block 1"
          />
          <div
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "scroll",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
                "whiteSpace": "pre",
              }
            }
          >
            Block 1
          </div>
        </div>
      </div>
      <section>
        <div
          className="c9 vf-canvas__step"
          onMouseDown={[Function]}
        >
          <div
            className="c10"
          >
            Order Pizza
          </div>
        </div>
        <div
          className="c9 vf-canvas__step"
          onMouseDown={[Function]}
        >
          <div
            className="c10"
          >
            <div
              className="c11 c12"
              style={
                Object {
                  "backgroundColor": "#ECF8FA",
                  "color": "#36B4D2",
                }
              }
            >
              M
            </div>
            New Order
          </div>
        </div>
      </section>
    </div>
  </div>
</div>
`;

exports[`Storyshots Creator/Block Sub Sections 1`] = `
.c8 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #6e849a;
}

.c8 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c9 .c7 {
  color: #fff;
}

.c10 .c7 {
  color: #6e849a;
}

.c0 {
  width: 330px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 10px 10px 10px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,#EBEFF4,#e7eaf1);
  position: relative;
  opacity: 1;
  border-color: none;
  -webkit-transition: opacity 0.15s ease;
  transition: opacity 0.15s ease;
}

.vf-canvas--commenting .c0 {
  cursor: crosshair;
}

.c0::before {
  display: block;
  border-radius: 8px;
  position: absolute;
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border: 1px solid #D4D9E0;
  content: '';
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.vf-canvas__node:not(.vf-canvas__node--disabled):not(.vf-canvas__node--focused) .c0:hover::before {
  box-shadow: 0 4px 8px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered .c0 {
  cursor: copy;
}

.vf-canvas__node--focused .c0::before {
  box-shadow: 0 12px 32px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--selected .c0,
.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0 {
  border-color: #5d9df5;
}

.vf-canvas__node--selected .c0::before,
.vf-canvas__node--highlighted .c0::before,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0::before {
  display: none;
}

.vf-canvas--creating-link .vf-canvas__node--disabled .c0 {
  opacity: 0.7;
  cursor: not-allowed;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0 {
  opacity: 0.7;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0:not(.vf-canvas__node--merge-target):hover {
  opacity: 1;
}

.vf-canvas--markup .c0 {
  pointer-events: none !important;
}

.c0 .c11 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
  text-overflow: ellipsis;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
  text-overflow: ellipsis;
  padding: 0 42px;
}

.c3 {
  max-width: 100%;
}

.vf-canvas--merging .c3,
.vf-canvas--creating-link .c3 {
  pointer-events: none;
}

.c3 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: text;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #62778c;
}

.c3 input:active {
  background: transparent;
}

.vf-canvas--commenting .c3 input {
  cursor: crosshair;
}

.c3 .vf-canvas__node--active input {
  color: #132144;
}

.c6 {
  position: absolute;
  left: 0;
  padding: 0 5px;
}

.c1 {
  position: relative;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  background-color: #fff;
}

<div
  className="c0 vf-canvas__block"
>
  <div
    className="c1 vf-canvas__block__section"
  >
    <div
      className="c2"
    >
      <div
        className="c3 vf-canvas__block__section__title"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          tabIndex={-1}
          value="New Block"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          New Block
        </div>
      </div>
    </div>
    <section>
      <div
        className="c4"
      >
        Step 1
      </div>
      <div
        className="c4"
      >
        Step 2
      </div>
      <div
        className="c4"
      >
        Step 3
      </div>
      <div
        className="c4"
      >
        Step 4
      </div>
      <div
        className="c4"
      >
        Step 5
      </div>
    </section>
  </div>
  <div
    className="c1 vf-canvas__block__section"
  >
    <div
      className="c5"
    >
      <div
        className="c6"
      >
        <span
          className="c7 c8"
          color="#6e849a"
          size={16}
        >
          <svg
            data-file-name="SvgHome"
          />
        </span>
      </div>
      <div
        className="c3 vf-canvas__block__section__title"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          tabIndex={-1}
          value="Section1"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          Section1
        </div>
      </div>
    </div>
    <section>
      <div
        className="c4"
      >
        Step 1
      </div>
      <div
        className="c4"
      >
        Step 2
      </div>
    </section>
  </div>
  <div
    className="c1 vf-canvas__block__section"
  >
    <div
      className="c5"
    >
      <div
        className="c6"
      >
        <span
          className="c7 c8"
          color="#6e849a"
          size={16}
        >
          <svg
            data-file-name="SvgHome"
          />
        </span>
      </div>
      <div
        className="c3 vf-canvas__block__section__title"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          tabIndex={-1}
          value="Section2 Blah blah blah blah blah"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          Section2 Blah blah blah blah blah
        </div>
      </div>
    </div>
    <section>
      <div
        className="c4"
      >
        Step 1
      </div>
      <div
        className="c4"
      >
        Step 2
      </div>
    </section>
  </div>
</div>
`;
